tests/transpiler/x/java/map_nested_assign.error
exit status 1
Main.java:15: error: <identifier> expected
         outer;
              ^
Main.java:16: error: <identifier> expected
        Data1( outer) {
                    ^
2 errors
